# appstream

./: Cargo.toml  LICENSE-MIT.md  README.md
src/: comp_type.rs  component.rs  id.rs  lib.rs  license.rs  metainfo.rs
src/field/: category.rs  copyright.rs  icon.rs  id.rs  license.rs  mod.rs  name.rs  pkg_name.rs  summary.rs
