[package]
name = "appstream"
version = "0.1.0"
authors = ["Eyal Kalderon <ebkalderon@gmail.com>"]
description = "Parser for AppStream metadata"

[dependencies]
failure = { version = "0.1.1", features = ["derive"] }
lazy_static = "1.0"
license-exprs = "1.3.0"
regex = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.2.1"
sxd-document = "0.2.6"
tld = "1.8.0"
url = "1.7.0"
url_serde = "0.2.0"
xpath_reader = "0.5.0"
