[package]
name = "appstream"
version = "0.1.0"
authors = ["Eyal Kalderon <ebkalderon@gmail.com>"]
description = "Parser for AppStream metadata"

[dependencies]
failure = { version = "0.1.1", features = ["derive"] }
lazy_static = "1.0"
license-exprs = "1.4.0"
regex = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.2.1"
sxd-document = "0.2.6"
psl = "0.4"
url = "1.7"
xpath_reader = "0.5.0"
